...
import com.android.gatherly.model.profile.Profile
import kotlin.collections.forEach

object EventsParticipantsSuggestionTestTag {
  const val INPUT_PARTICIPANT = "EVENT_PARTICIPANT_SEARCH"

  const val INPUT_GROUP = "EVENT_GROUP_SEARCH"
  const val BUTTON_SEE_ADDED_PARTICIPANT = " EVENT_BUTTON_ADDED_PARTICIPANT"

  const val BUTTON_SEE_ADDED_GROUP = " EVENT_BUTTON_ADDED_GROUP"

  const val PARTICIPANT_MENU = "PARTICIPANT_MENU"

  const val GROUP_MENU = "GROUP_MENU"

  fun getTestTagProfileSuggestionItem(profileId: String): String =
      "profileSuggestionItem ${profileId}"

  fun getTestTagProfileAddItem(profileId: String): String = "profileAddedItem ${profileId}"

...
