...
      label = { Text(stringResource(R.string.events_date_field_label)) },
      placeholder = { Text("dd/MM/yyyy") },
      isError = dueDateError,
      supportingText = {
        if (dueDateError) {
          Text(
              "Invalid format or past date",
              modifier = Modifier.testTag(AddEventScreenTestTags.ERROR_MESSAGE))
        }
      },
      colors = textFieldColors,
      keyboardOptions =
          KeyboardOptions(keyboardType = KeyboardType.Number, imeAction = ImeAction.Next),
...
